objects/EUR_CRM_Criteria_Set__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Footer_Message__c</fullName>
        <label>Footer Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Header_Message__c</fullName>
        <label>Header Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Last_Mass_Update_Date__c</fullName>
        <label>Last Mass Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Criteria Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Criteria_Weight__c</fullName>
        <description>Total Criteria Threshold Weight</description>
        <label>Total Criteria Weight</label>
        <summarizedField>EUR_CRM_Criteria_Threshold__c.EUR_CRM_Weight__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Criteria_Threshold__c.EUR_CRM_Criteria_Set__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Criteria Set (EU)</label>
    <listViews>
        <fullName>AT_Criteria_Set</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Total_Criteria_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_AT_Image_Level_Criteria,EUR_CRM_Criteria_Set__c.EUR_AT_Volume_Potential_Criteria</value>
        </filters>
        <label>AT Criteria Set</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_Criteria_Sets</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_CH_Image_Level_Criteria,EUR_CRM_Criteria_Set__c.EUR_CH_Volume_Potential_Criteria</value>
        </filters>
        <label>CH Criteria Sets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_Criteria_Set</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Title__c</columns>
        <columns>EUR_CRM_Total_Criteria_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>DK Criteria Set</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Criteria_Set_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Last_Mass_Update_Date__c</columns>
        <columns>EUR_CRM_Title__c</columns>
        <columns>EUR_CRM_Total_Criteria_Weight__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_BG_Image_Level_Criteria,EUR_CRM_Criteria_Set__c.EUR_BG_Volume_Potential_Criteria</value>
        </filters>
        <label>EUR BG All Criteria Set View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Criteria_Set_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Last_Mass_Update_Date__c</columns>
        <columns>EUR_CRM_Title__c</columns>
        <columns>EUR_CRM_Total_Criteria_Weight__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_PT_Image_Level_Criteria,EUR_CRM_Criteria_Set__c.EUR_PT_Volume_Potential_Criteria</value>
        </filters>
        <label>EUR PT All Criteria Set View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_Criteria_Sets</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_FI_Image_Level_Criteria,EUR_CRM_Criteria_Set__c.EUR_FI_Volume_Potential_Criteria</value>
        </filters>
        <label>FI Criteria Sets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MA_Criteria_Sets</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_MA_Image_Level_Criteria</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_MA_Volume_Potential_Criteria</value>
        </filters>
        <label>MA Criteria Sets</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NG_Criteria_Set</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Total_Criteria_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_NG_Image_Level_Criteria,EUR_CRM_Criteria_Set__c.EUR_NG_Volume_Potential_Criteria</value>
        </filters>
        <label>NG Criteria Set</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PT_Criteria_Sets</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_PRT_Image_Level_Criteria</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_PRT_Volume_Potential_Criteria</value>
        </filters>
        <label>PT Criteria Sets</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ZA_Criteria_Sets</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Set__c.EUR_ZA_Image_Level_Criteria,EUR_CRM_Criteria_Set__c.EUR_ZA_Volume_Potential_Criteria</value>
        </filters>
        <label>ZA Criteria Sets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Criteria Set No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Set (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR AO Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR AO Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>AT Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>AT Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR BG Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR BG Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR CH Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR CH Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>DE Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>DE Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Image_Level_Criteria</fullName>
        <active>true</active>
        <description>Record Type for DK Image Level Criteria</description>
        <label>EUR DK Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <description>Record Type for DK Volume Potential</description>
        <label>EUR DK Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EE Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EE Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR FI Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR FI Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>GB Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>GB Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR KE Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR KE Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>LT Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>LT Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>LV Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_LV_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>LV Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR MA Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR MA Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR NG Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR NG Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>Image Level Criteria (PRT)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>Volume Potential Criteria (PRT)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR PT Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR PT Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR RU Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR RU Volume Potential Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Image_Level_Criteria</fullName>
        <active>true</active>
        <label>EUR ZA Image Level Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Volume_Potential_Criteria</fullName>
        <active>true</active>
        <label>EUR ZA Volume Potential Criteria</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>